--- a/CurrentlyPlaying/css/main.css
+++ b/CurrentlyPlaying/css/main.css
@@ -4,7 +4,7 @@
 */
 
 div#main-outer {
-    width: 300px;
+    width: 350px;
     margin: 5px;
     background: #DDD;
     border-radius: 5px;
@@ -12,22 +12,33 @@ div#main-outer {
 
 div#main-inner {
     padding: 8px;
+    background: rgb(255, 255, 255);
 }
 
 div#main-title {
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
     font-weight: bold;
 }
 
 img#main-image {
     display: block;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
 }
-
 div#main-about-text {
-    margin-top: 10px;
+    margin-top: 18px;
+    margin-bottom: 14px;
     text-align: center;
+    font-size: 14px;
+    display:inline-block;
+}
+div#nowPlaying {
+    margin-top: 18px;
+    margin-bottom: 14px;
+    text-align: center;
+    font-size: 14px;
+    display:inline-block;
 }
