--- a/CurrentlyPlaying/css/main.css
+++ b/CurrentlyPlaying/css/main.css
@@ -1,13 +1,13 @@
 /*
 ** file: css/main.css
-** description: custom styling for "html/main.html" file
+** description: custom styling for "popup.html" file
 */
 
 div#main-outer {
     width: 350px;
     margin: 5px;
     background: #DDD;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 div#main-inner {
@@ -15,18 +15,20 @@ div#main-inner {
     background: rgb(255, 255, 255);
 }
 
-div#main-title {
+div#radioStation {
     font-size: 18px;
     text-align: center;
     font-weight: bold;
 }
 
-img#main-image {
+img#albumArt {
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
+    width: 300px;
+    height: 300px;
 }
 div#main-about-text {
     margin-top: 18px;
@@ -36,9 +38,19 @@ div#main-about-text {
     display:inline-block;
 }
 div#nowPlaying {
-    margin-top: 18px;
+    margin-top: 14px;
     margin-bottom: 14px;
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
     display:inline-block;
+}
+.searchBar a>img{
+    margin-right: 3%;
+    margin-top: 15px;
+    width: 25px;
+    height: 25px;
+}
+.searchBar a>img:hover {
+    opacity:1.0;
+    box-shadow:none;    
 }
